added read more at featured post; added fetch and async fun ction to get post from contentfull in category page; changed globals style colors.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,11 @@
 @import "tailwindcss";
 
 :root {
-  --background: #fffcfa;
-  --foreground: #333333;
-  --primary: #dda9b5;
-  --secondary: #b5c9b3;
-  --accent: #f4e3cf;
+  --background: #fdfaff;
+  --foreground: #2e2e2e;
+  --primary: #bfa2db;
+  --secondary: #d3bce6;
+  --accent: #f5eaff;
 }
 
 @theme inline {
